push to  send code

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   </head>
   <body>
     <div class="container-sm">
-      <nav class="nav_container">
+      <nav class="nav_container row flex-nowrap py-2">
         <!-- image  -->
-        <div class="imgae_logo">
+        <div class="imgae_logo col col-md-2">
           <img src="./image/Go Elite Logo 1.svg" alt="" />
         </div>
         <!-- links -->
-        <ul class="links_container">
+        <ul class="links_container col-md-7">
           <li class="active">
             <a href=""> Home </a>
           </li>
@@ -56,11 +56,11 @@
           </li>
         </ul>
         <!-- buttom inquery -->
-        <div class="buttom_inquri">
+        <div class="buttom_inquri col col-md-3">
           <button>inqueri</button>
         </div>
         <!-- menue bar icon  -->
-        <div class="menu_bar">
+        <div class="menu_bar col">
           <i
             class="fa fa-bars"
             aria-hidden="true"
@@ -665,61 +665,63 @@
     <!-- footer section -->
     <div class="container-sm">
       <div class="footerSection">
-        <div class="footer">
+        <div class="footer row">
           <!-- logo footer -->
-          <div class="logoFooter">
+          <div class="logoFooter col">
             <img src="image/footeLogo.png" alt="" />
           </div>
-          <div class="linksAndcontactUs">
-            <!-- links -->
-            <div class="footerLinks">
-              <ul class="links">
-                <li>home</li>
-                <li>Luxury Egypt Tour</li>
-                <li>Dubai Tour</li>
-                <li>Morocco Tour</li>
-                <li>About Us</li>
-                <li>Blog</li>
-              </ul>
-            </div>
-            <!-- contact us footer -->
-            <div class="contactUsFooter">
-              <div>contact us</div>
-              <ul class="coutactUs">
-                <li class="">
-                  <div class="iconSocil">
-                    <img
-                      src="https://www.svgrepo.com/show/488278/mail.svg"
-                      width="15px"
-                      height="15px"
-                      alt=""
-                    />
-                  </div>
-                  <p>mohamedrefat@gmail.com</p>
-                </li>
-                <li class="">
-                  <div class="iconSocil">
-                    <img
-                      src="https://www.svgrepo.com/show/473600/facebook.svg"
-                      width="15px"
-                      height="15px"
-                      alt=""
-                    />
-                  </div>
-                  <span>Go Elite Club Travel</span>
-                </li>
-                <li class="">
-                  <div class="iconSocil">
-                    <img
-                      src="https://www.svgrepo.com/show/474324/instagram.svg"
-                      width="15px"
-                      height="15px"
-                      alt=""
-                    />
-                  </div>
-                  <span>goelite.club</span>
-                </li>
-              </ul>
+          <div class="linksAndcontactUs col">
+            <div class="row px-2">
+              <!-- links -->
+              <div class="footerLinks col-6">
+                <ul class="links">
+                  <li>home</li>
+                  <li>Luxury Egypt Tour</li>
+                  <li>Dubai Tour</li>
+                  <li>Morocco Tour</li>
+                  <li>About Us</li>
+                  <li>Blog</li>
+                </ul>
+              </div>
+              <!-- contact us footer -->
+              <div class="contactUsFooter col-6">
+                <div>contact us</div>
+                <ul class="coutactUs">
+                  <li class="">
+                    <div class="iconSocil">
+                      <img
+                        src="https://www.svgrepo.com/show/488278/mail.svg"
+                        width="15px"
+                        height="15px"
+                        alt=""
+                      />
+                    </div>
+                    <p>mohamedrefat@gmail.com</p>
+                  </li>
+                  <li class="">
+                    <div class="iconSocil">
+                      <img
+                        src="https://www.svgrepo.com/show/473600/facebook.svg"
+                        width="15px"
+                        height="15px"
+                        alt=""
+                      />
+                    </div>
+                    <span>Go Elite Club Travel</span>
+                  </li>
+                  <li class="">
+                    <div class="iconSocil">
+                      <img
+                        src="https://www.svgrepo.com/show/474324/instagram.svg"
+                        width="15px"
+                        height="15px"
+                        alt=""
+                      />
+                    </div>
+                    <span>goelite.club</span>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
